[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://Label2.gd" type="Script" id=2]
[ext_resource path="res://Label1.gd" type="Script" id=3]

[node name="Node" type="Node"]
script = ExtResource( 1 )

[node name="Board" type="VBoxContainer" parent="."]
margin_left = 274.0
margin_top = 72.0
margin_right = 696.0
margin_bottom = 432.0

[node name="Row1" type="HBoxContainer" parent="Board"]

[node name="button1" type="TextureButton" parent="Board/Row1"]

[node name="button2" type="TextureButton" parent="Board/Row1"]
margin_left = 4.0
margin_right = 4.0

[node name="button3" type="TextureButton" parent="Board/Row1"]
margin_left = 8.0
margin_right = 8.0

[node name="Row2" type="HBoxContainer" parent="Board"]

[node name="button4" type="TextureButton" parent="Board/Row2"]

[node name="button5" type="TextureButton" parent="Board/Row2"]
margin_left = 4.0
margin_right = 4.0

[node name="button6" type="TextureButton" parent="Board/Row2"]
margin_left = 8.0
margin_right = 8.0
rect_pivot_offset = Vector2( -467, -156 )

[node name="Row3" type="HBoxContainer" parent="Board"]

[node name="button7" type="TextureButton" parent="Board/Row3"]

[node name="button8" type="TextureButton" parent="Board/Row3"]
margin_left = 4.0
margin_right = 4.0

[node name="button9" type="TextureButton" parent="Board/Row3"]
margin_left = 8.0
margin_right = 8.0

[node name="Button" type="Button" parent="."]
margin_left = 378.0
margin_top = 533.0
margin_right = 633.0
margin_bottom = 593.0
text = "RESTART"

[node name="Label1" type="Label" parent="."]
margin_left = 118.0
margin_top = 544.0
margin_right = 277.0
margin_bottom = 585.0
align = 1
script = ExtResource( 3 )

[node name="Label2" type="Label" parent="."]
margin_left = 760.0
margin_top = 540.0
margin_right = 919.0
margin_bottom = 581.0
align = 1
script = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 275.0
margin_top = 15.0
margin_right = 673.0
margin_bottom = 77.0
align = 1
uppercase = true

[node name="Player X" type="Label" parent="."]
margin_left = 171.0
margin_top = 507.0
margin_right = 222.0
margin_bottom = 521.0
text = "Player X"
align = 1

[node name="Player O" type="Label" parent="."]
margin_left = 806.0
margin_top = 508.0
margin_right = 860.0
margin_bottom = 533.0
text = "Player O"
align = 1

[connection signal="points_changeo" from="." to="Label2" method="_on_Node_points_changeo"]
[connection signal="points_changex" from="." to="Label1" method="_on_Node_points_changex"]
[connection signal="button_up" from="Board/Row1/button1" to="." method="_on_button1_button_up"]
[connection signal="button_up" from="Board/Row1/button2" to="." method="_on_button2_button_up"]
[connection signal="button_up" from="Board/Row1/button3" to="." method="_on_button3_button_up"]
[connection signal="button_up" from="Board/Row2/button4" to="." method="_on_button4_button_up"]
[connection signal="button_up" from="Board/Row2/button5" to="." method="_on_button5_button_up"]
[connection signal="button_up" from="Board/Row2/button6" to="." method="_on_button6_button_up"]
[connection signal="button_up" from="Board/Row3/button7" to="." method="_on_button7_button_up"]
[connection signal="button_up" from="Board/Row3/button8" to="." method="_on_button8_button_up"]
[connection signal="button_up" from="Board/Row3/button9" to="." method="_on_button9_button_up"]
[connection signal="button_up" from="Button" to="." method="_on_Button_button_up"]
